Fix ASSERT fail within AudioBus::processWithGainFrom() https://bugs.webkit.org/show_bug.cgi?id=76685

Patch by Raymond Liu <raymond.liu@intel.com> on 2012-01-30
Reviewed by Daniel Bates.

Source/WebCore:

Test: webaudio/audionode-connect-order.html

* webaudio/AudioBasicProcessorNode.cpp:
(WebCore::AudioBasicProcessorNode::AudioBasicProcessorNode):

LayoutTests:

* webaudio/audionode-connect-order-expected.txt: Added.
* webaudio/audionode-connect-order.html: Added.

Canonical link: https://commits.webkit.org/94289@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106332 268f45cc-cd09-0410-ab3c-d52691b4dbfc